[package]
name = "cli_gen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
totp-rs = "5.7.0"
chrono = "0.4.0"
base32 = "0.4"
clap = { version = "4.5", features = ["derive"]}
#clipboard suuport
arboard = { version = "3.5.0", optional = true}
#QR code output
qrcodegen = { version = "1.5.0", optional = true}
dirs = "6.0.0"

[features]
default = []                # tiny binary by default
clipboard = ["dep:arboard"] # enable with `--features clipboard`
qr        = ["dep:qrcodegen"]
